// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> Should render and match the snapshot when loading 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 36,
          "fontWeight": "bold",
        }
      }
    >
      Login
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 2,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        label="Username"
        name="username"
        onChangeText={[Function]}
        placeholder="Username"
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#eee",
            "borderRadius": 5,
            "borderWidth": 2,
            "fontSize": 16,
            "fontWeight": "bold",
            "marginHorizontal": 15,
            "marginTop": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        label="Password"
        name="password"
        onChangeText={[Function]}
        placeholder="Password"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#eee",
            "borderRadius": 5,
            "borderWidth": 2,
            "fontSize": 16,
            "fontWeight": "bold",
            "marginHorizontal": 15,
            "marginTop": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
          }
        }
        type="password"
        underlineColorAndroid="transparent"
        value=""
      />
      <View
        style={
          Object {
            "flex": 0,
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 0,
              "flexDirection": "column",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#566ed3",
                "borderRadius": 50,
                "elevation": 3,
                "height": 60,
                "justifyContent": "center",
                "marginTop": 50,
                "shadowColor": "#566ed3",
                "shadowOffset": Object {
                  "height": 3,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 6,
                "width": 60,
              }
            }
          >
            <ActivityIndicator
              animating={true}
              color="white"
              hidesWhenStopped={true}
              size="large"
              style={null}
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Login /> Should render and match the snapshot with error 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 36,
          "fontWeight": "bold",
        }
      }
    >
      Login
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 2,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        label="Username"
        name="username"
        onChangeText={[Function]}
        placeholder="Username"
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#eee",
            "borderRadius": 5,
            "borderWidth": 2,
            "fontSize": 16,
            "fontWeight": "bold",
            "marginHorizontal": 15,
            "marginTop": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        label="Password"
        name="password"
        onChangeText={[Function]}
        placeholder="Password"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#eee",
            "borderRadius": 5,
            "borderWidth": 2,
            "fontSize": 16,
            "fontWeight": "bold",
            "marginHorizontal": 15,
            "marginTop": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
          }
        }
        type="password"
        underlineColorAndroid="transparent"
        value=""
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingTop": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#9f3a38",
              "fontSize": 15,
            }
          }
        >
          error message
        </Text>
      </View>
      <View
        style={
          Object {
            "flex": 0,
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 0,
              "flexDirection": "column",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#566ed3",
                "borderRadius": 50,
                "elevation": 3,
                "height": 60,
                "justifyContent": "center",
                "marginTop": 50,
                "shadowColor": "#566ed3",
                "shadowOffset": Object {
                  "height": 3,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 6,
                "width": 60,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "bold",
                }
              }
            >
              <Text />
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Login /> Should render and match the snapshot without error 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 36,
          "fontWeight": "bold",
        }
      }
    >
      Login
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 2,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        label="Username"
        name="username"
        onChangeText={[Function]}
        placeholder="Username"
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#eee",
            "borderRadius": 5,
            "borderWidth": 2,
            "fontSize": 16,
            "fontWeight": "bold",
            "marginHorizontal": 15,
            "marginTop": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        label="Password"
        name="password"
        onChangeText={[Function]}
        placeholder="Password"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#eee",
            "borderRadius": 5,
            "borderWidth": 2,
            "fontSize": 16,
            "fontWeight": "bold",
            "marginHorizontal": 15,
            "marginTop": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
          }
        }
        type="password"
        underlineColorAndroid="transparent"
        value=""
      />
      <View
        style={
          Object {
            "flex": 0,
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 0,
              "flexDirection": "column",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#566ed3",
                "borderRadius": 50,
                "elevation": 3,
                "height": 60,
                "justifyContent": "center",
                "marginTop": 50,
                "shadowColor": "#566ed3",
                "shadowOffset": Object {
                  "height": 3,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 6,
                "width": 60,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "bold",
                }
              }
            >
              <Text />
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
